Fixed small spacing issue for location cards on world pages.

--- a/VRCompyTheme.user.css
+++ b/VRCompyTheme.user.css
@@ -2,7 +2,7 @@
 @name           VRCompy App Theme
 @namespace      https://github.com/VRSquid/VRCompy-VRC-Home
 @updateURL      https://vrsquid.github.io/VRCompy-VRC-Home/VRCompyTheme.user.css
-@version        1.2.2
+@version        1.2.3
 @description    A style which aims to fix a few issues with the VRChat home website, and theme it like my mobile app, 'VRCompy'
 @author         VRSquid
 ==/UserStyle== */
@@ -712,7 +712,6 @@
     .home-content .location-card .usercard .user-img, .location-card .usercard .user-img-16x9{
         width: 50px !important;
         height: 50px !important;
-        margin-left: 5px !important;
     }
     
     .home-content .location-card.size-medium .location-users{
@@ -723,7 +722,7 @@
         padding: 5px 10px 0 10px !important;
     }
     
-    .location-container .user-img, .location-container .user-img-16x9{
+    .location-card .user-img, .location-container .user-img-16x9{
         margin-left: 5px !important;
         margin-top: 4.8px !important;
     }
